# cs5330_projects

./: .gitignore
project1/: CMakeLists.txt  README.md  report.docx  ~$report.docx
project1/include/: DA2Network.hpp  effects_face.h  faceDetect.h  filters.h  imgDisplay.h
project1/project1_img/: CMakeLists.txt
project1/project1_img/src/: imgDisplay.cpp  main.cpp
project1/project1_vid/: CMakeLists.txt
project1/project1_vid/include/: DA2Network.hpp  filters.h  imgDisplay.h
project1/project1_vid/src/: filter.cpp  imgDisplay.cpp  timeBlur.cpp  vidDisplay.cpp
project1/src/: effects_face.cpp  faceDetect.cpp  filter.cpp  imgDisplay.cpp  main_texture.cpp  timeBlur.cpp  vidDisplay.cpp
project2/: CMakeLists.txt  README.md
project2/include/: csv_io.h  dir_scan.h  features.h  ranking.h  task_registry.h  utils.h
project2/src/: build_db.cpp  csv_io.cpp  dir_scan.cpp  features.cpp  query_db.cpp  query_gui.py  query_task5.cpp  query_task7_grass.cpp  ranking.cpp  task_registry.cpp  utils.cpp
